# defrag

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-18-core-loop-data-foundation.md  2026-07-23-combat-system.md
docs/superpowers/specs/: 2026-07-18-core-loop-data-foundation-design.md  2026-07-23-combat-system-design.md
src/game/: __init__.py  __main__.py  config.py
src/game/core/: __init__.py  app.py  loop.py  scene.py
src/game/entities/: __init__.py  ball.py  core.py  fragment.py  player.py
src/game/inventory/: hotbar.py  storage.py
src/game/items/: tools.py
src/game/scenes/: __init__.py  play.py
src/game/systems/: camera.py  mining.py  spawner.py
tests/: conftest.py  test_ball.py  test_camera.py  test_config.py  test_core.py  test_fragment.py  test_hotbar.py  test_loop.py  test_mining.py  test_play_scene.py  test_player.py  test_scene_manager.py  test_smoke.py  test_spawner.py  test_storage.py
